@@ -1,3 +1,10 @@
+2015-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/tif_dirread.c (TIFFReadDirEntryCheckRangeSlongSlong8):
+	Change implementation so that it does not sometimes overflow the
+	range of a 32-bit int and to avoid a signed vs unsigned compare
+	compiler warning.
+
 2015-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Makefile.am (distcheck-hook), configure.ac: Applied patches by
